# elkapod_teleop

./: .gitignore  README.md
elkapod_controller_gui/: package.xml  setup.cfg  setup.py
elkapod_controller_gui/elkapod_controller_gui/: elkapod_controller.ui  elkapod_controller2.ui  elkapod_controller_gui.py  elkapod_controller_ui.py  elkapod_gui.py  elkapod_gui_node.py  elkapod_navigation_gui.py  elkapod_navigation_ui.py
elkapod_gamepad/: package.xml  setup.cfg  setup.py
elkapod_gamepad/elkapod_gamepad/: elkapod_joy_controller.py  elkapod_joy_feedback_node.py
elkapod_gamepad/launch/: teleop.launch.py
elkapod_teleop_joy/: package.xml  setup.cfg  setup.py
elkapod_teleop_joy/elkapod_joystick/: elkapod_leg_joy_controller.py
elkapod_teleop_joy/elkapod_teleop_joy/: elkapod_joy_controller.py  elkapod_joy_controller_v2.py  elkapod_leg_joy_controller.py  stability_check.py
elkapod_teleop_joy/launch/: elkapod_joy_controller.launch.py
elkapod_ui/: package.xml  setup.cfg  setup.py
elkapod_ui/elkapod_ui/: elkapod_controller.ui  elkapod_controller_gui.py  elkapod_controller_ui.py  elkapod_gui.py  elkapod_gui_node.py  elkapod_navigation.ui  elkapod_navigation_gui.py
