<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elkapod_controller_gui</name>
  <version>1.0.0</version>
  <description>Simple Elkapod controller GUI</description>
  <maintainer email="antoni.przybylik@wp.pl">Antoni Przybylik</maintainer>
  <license>GPL-2.0</license>

  <depend>rclpy</depend>
  <depend>elkapod_msgs</depend>

  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
